Fix buttons alignments and styles

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -28,7 +28,7 @@ Button {
     border-radius: 5px;
 }
 
-.removeButton {
+.smallButton {
     justify-self: end;
     height: 20px;
 }
@@ -97,4 +97,20 @@ li p {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+Form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.generalList {
+    display: flex;
+    flex-direction: column;
+}
+
+.generalList Button {
+    align-self: flex-end;
 }
